clickable functionality to blogs in dashboard

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,2 +1,16 @@
+{{!-- <div class="container">
+    {{#each blogs}}
+    {{!-- make div with class blog clickable  --}}
+        <div class="blog" data-id ="{{blog.id}}">
+            <h2>{{title}}</h2>
+            <p>{{content}}</p>
+            {{!-- <p>Posted by {{user.username}}</p> --}}
+        {{!-- </div> --}}
+       {{!-- {{else}} --}}
+       {{!-- look into data-attribute  and data content specifically this. id --}}
+        {{!-- <p>No blogs have been posted yet.</p> 
+    {{/each}}
+</div> --}} 
+
 {{>blog_template}}
 <script src="/js/dashboard.js"></script>
