--- a/views/partials/blog_template.handlebars
+++ b/views/partials/blog_template.handlebars
@@ -1,46 +1,79 @@
 <div>
 
-    {{#if iscreatedpost}}
-    {{!-- make blog clickable --}}
+  {{#if iscreatedpost}}
+    {{! make blog clickable }}
     <div class="blog" id="dashboardblog" data-id={{blog.id}}>
-        <textarea id='updatedblogtitle' rows="5" cols="50">{{blog.title}}</textarea>
-        <textarea id="updatedblogtext" rows='5' cols='50'>{{blog.content}}</textarea>
-        {{!-- <p>Posted by {{this.user.username}}</p> --}}
-    </div>
+      <textarea
+        id="updatedblogtitle"
+        rows="5"
+        cols="50"
+      >{{blog.title}}</textarea>
+      <textarea
+        id="updatedblogtext"
+        rows="5"
+        cols="50"
+      >{{blog.content}}</textarea>
+      <p>Posted by {{this.user.username}}</p>
+    </div> 
 
-    {{/if}}
-    {{!-- only title if in blog --}}
+  {{/if}}
+  
+
+  {{#if isdashboard}}
+    <div>
+      <input id="blog-title" />
+    </div>
+    <div>
+      <input id="blog-text" />
+    </div>
+  {{/if}}
+  {{#if iscomment}}
+    <div>
+      <input id="blog-text-comment" />
+      <button id="blogbtn">{{btn}}</button>
+    </div>
+  {{/if}}
+ <div>
     {{#if isdashboard}}
-    <div>
-        <input id="blog-title">
-    </div>
-    <div>
-        <input id="blog-text">
-    </div>
+      {{! when new post }}
+      {{! button would change to create or comment depending on what stage }}
+      <button id="blogbtn">{{btn}}</button>
     {{/if}}
-    {{#if iscomment}}
-    <div>
-        <input id="blog-text-comment">
-        <button id="blogbtn">{{btn}}</button>
-    </div>
-    {{/if}}
-    <div>
-        {{#if isdashboard}}
-        {{!-- when new post --}}
-        {{!-- button would change to create or comment depending on what stage --}}
-        <button id="blogbtn">{{btn}}</button>
-        {{/if}}
 
-        {{!-- after post has been created --}}
-        {{#if iscreatedpost}}
-        <button id="updatebtn">Update</button>
-        <button id="deletebtn">Delete</button>
-        {{/if}}
-        {{!-- {{#unless isdashboard}}
+    {{! after post has been created }}
+    {{#if iscreatedpost}}
+      <button id="updatebtn">Update</button>
+      <button id="deletebtn">Delete</button>
+    {{/if}}
+    {{#unless isdashboard}}
         <button id="commentbtn">comment</button>
-        {{/unless}} --}}
-    </div>
+        {{/unless}}
+  </div> 
+  <div>
+    {{#if userblog}}
+      <div class="container">
+        {{#each blogs}}
+          {{! make div with class blog clickable  }}
+          <div class="blog" data-id="{{id}}">
+            <h2>{{title}}</h2>
+            <p>{{content}}</p>
+            <p>Posted by {{user}}</p> 
+            {{!-- only show btns if the blog is clicked taken to another page  --}}
+          <button id="updatebtn">Update</button>
+          <button id="deletebtn">Delete</button>  
+          </div>
+         
+        {{/each}}
+    {{else}}
+
+          {{! look into data-attribute  and data content specifically this. id }}
+          <p>No blogs have been posted yet.</p>
+      
+      </div>
+    {{/if}}
+  </div>
 </div>
+
 {{#if isdashboard}}
-<button id="newblog">New Post</button>
+  <button id="newblog">New Post</button>
 {{/if}}
