--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -1,4 +1,5 @@
 {{!-- set blog id into attribute to div  --}}
+<div>Comment Page</div>
 <div class ="comment" id="blogComment" data-id ="{{blog.id}}"  data-user_id="{{blog.user_id}}">
 <h1>{{blog.title}}</h1>
 <p>{{blog.content}}</p>
