--- a/views/partials/signlogin_template.handlebars
+++ b/views/partials/signlogin_template.handlebars
@@ -1,7 +1,8 @@
-<h1>{{formTitle}}</h1>
+<div class="sessionPage">
+   <h1>{{formTitle}}</h1>
 <form class="login-form">
     {{#unless isLoginForm}}
-    <div class="mb-3, form-group">
+    <div class="mb-3, form-group",>
         <label for="name" class="form-label">Full Name</label>
         <input type="text" class="form-control" id="name"  placeholder="Full Name">
     </div>
@@ -31,7 +32,9 @@
 <p>Already have an account? <a href="/login">Log in</a></p>
 {{/if}}
 
-</form>
+</form> 
+</div>
+
 
 
 
