--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,14 +10,14 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    {{! <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" href="/css/style.css"> }}
+    {{! <link rel="stylesheet" href="/css/jass.css"> }}
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body>
     <header>
       <nav>
-        <ul>
+        <ul class="navList">
           <li><a href="/">Home</a></li>
           {{#if logged_in}}
             <li><a href="/dashboard">Dashboard</a></li>
@@ -26,8 +26,12 @@
             <li><a href="/login">Login</a></li>
           {{/if}}
         </ul>
+        <div class="techLogo">
+          <h1>Techy Blogging</h1>
+        </div>
+
       </nav>
-      <h1>Techy Blog</h1>
+
     </header>
     <main class="container container-fluid mt-5">
       <!-- Render the sub layout -->
