--- a/views/createdComment.handlebars
+++ b/views/createdComment.handlebars
@@ -1,3 +1,4 @@
+
 <div>Created Comment</div>
 <div
   class="comment"
@@ -5,7 +6,10 @@
   data-id="{{comment.id}}"
   data-user_id="{{comment.user_id}}"
 >
-  <h1>{{comment.title}}</h1>
-  <p>{{comment.comment}}</p>
-  <p>Blog Content: {{blog.content}}</p>
+  <div>
+    <h1>{{comment.title}}</h1>
+    <p>{{comment.comment}}</p>
+  </div>
+
 </div>
+{{>blog_template}}
