--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -1,6 +1,9 @@
 {{!-- Displaying Clicked Blog--}}
-<div class ="comment" id="blogComment" data-id ="{{blog.id}}"  data-user_id="{{blog.user_id}}">
-<h1>{{blog.title}}</h1>
+<div class ="commentBlog" id="blogComment" data-id ="{{blog.id}}"  data-user_id="{{blog.user_id}}">
+<div class="hPBHeader">
+ <h1>{{blog.title}}</h1>
+<p>Posted by{{blog.user.username}} on {{blog.date}}</p>   
+</div>
 <p>{{blog.content}}</p>
 </div>
 
