--- a/views/createdComment.handlebars
+++ b/views/createdComment.handlebars
@@ -2,17 +2,16 @@
 
 <div
   class="commentBlog"
+
   id="blogComment"
   data-id="{{comment.id}}"
   data-user_id="{{comment.user_id}}"
 >
-<div class="hpBHeader">
-  <h3>Created Comment</h3>
-</div>
   
   <div>
-    <h1>{{comment.title}}</h1>
+
     <p>{{comment.comment}}</p>
+    <p>-{{comment.user.username}}</p>
   </div>
 
 </div>
