Event delegation for dashboard page when new blog is clicked run blog handleer

--- a/views/createdComment.handlebars
+++ b/views/createdComment.handlebars
@@ -11,7 +11,7 @@
   <div>
 
     <p>{{comment.comment}}</p>
-    <p>-{{comment.user.username}}</p>
+    <p>-{{comment.user.username}}, {{comment.date}}</p>
   </div>
 
 </div>
