--- a/views/partials/blog_template.handlebars
+++ b/views/partials/blog_template.handlebars
@@ -103,7 +103,7 @@
 
 {{! When on dashboard page  }}
 {{#if isdashboard}}
-  <div id="newblogBTN">
+  <div id="newBlogBTN">
     <button>New Post</button>
   </div>
 {{/if}}
