--- a/views/createdComment.handlebars
+++ b/views/createdComment.handlebars
@@ -1,13 +1,12 @@
-{{>blog_template}}
+{{!-- {{>blog_template}} --}}
 
 <div
   class="commentBlog"
-
   id="blogComment"
   data-id="{{comment.id}}"
   data-user_id="{{comment.user_id}}"
 >
-  
+
   <div>
 
     <p>{{comment.comment}}</p>
