Adding comments to clarify the createdComment handlebars

--- a/views/createdComment.handlebars
+++ b/views/createdComment.handlebars
@@ -1,4 +1,4 @@
-{{!-- {{>blog_template}} --}}
+{{!-- Displaying the createdComment--}}
 
 <div
   class="commentBlog"
@@ -9,7 +9,7 @@
 
   <div>
 
-    <p>{{comment.comment}}</p>
+    <p>On createdComment handle bar{{comment.comment}}</p>
     <p>-{{comment.user.username}}, {{comment.date}}</p>
   </div>
 
