--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -1,4 +1,4 @@
-{{!-- Displaying Clicked Blog--}}
+{{!-- Displaying Comments of Clicked Blog --}}
 <div class ="commentBlog" id="blogComment" data-id ="{{blog.id}}"  data-user_id="{{blog.user_id}}">
 <div class="hPBHeader">
  <h1>{{blog.title}}</h1>
