understanding the reason for incorrect user associated with comment

--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -11,7 +11,7 @@
         {{#each comments}}
             <div class="commentBlog" data-id="{{this.id}}" data-user_id="{{this.user_id}}">
                 <p>{{this.comment}}</p>
-                <p>-{{this.user.name}}, {{this.date}}</p>
+                <p>-{{this.user.username}}, {{this.date}}</p>
             </div>
            
         {{/each}}
