--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,7 +5,7 @@
       {{! Acronym hPB : homepageBlogHeader }}
       <div class="hPBHeader">
         <h2>{{this.title}}</h2>
-        <p>Posted by {{this.user.username}}{{this.date}}</p>
+        <p>Posted by {{this.user.username}}{{dateFormat this.date}}</p>
       </div>
       <p>{{this.content}}</p>
 
